<resources>
    <string name="app_name">notes</string>
    <string name="enter_title">Enter title here</string>
    <string name="enter_description">Enter description here</string>
    <string name="delete_note_body">Do you really want to delete this note?</string>
    <string name="no">No</string>
    <string name="alert">Alert</string>
    <string name="yes">Yes</string>
    <string name="notes_title">Notes Title</string>
    <string name="add_new_note">Add New Note</string>
    <string name="add_new_title">Add New Title</string>
    <string name="add_new_description">Add New Description</string>
    <string name="delete_btn">Delete Button</string>
    <string name="back_btn">Back Button</string>
    <string name="delete_alert_dialog">Delete Alert Dialog</string>
    <string name="add_notes_screen">Add Notes Screen</string>
</resources>